--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                                 <span class="text-xl">👨‍💼</span>
                             </div>
                             <div class="flex-1">
-                                <h4 class="font-medium">Ir. Ahmad Wijaya</h4>
+                                <h4 class="font-medium">Dwi Poetranto</h4>
                                 <p class="text-sm text-gray-600">Ketua Koperasi</p>
-                                <p class="text-xs text-blue-600">📞 +62 856-1114-745</p>
+                                <p class="text-xs text-blue-600">📞 +62 812-2700-377</p>
                             </div>
                         </div>
                         <div class="flex items-center space-x-4 p-3 border border-gray-200 rounded-lg">
@@ -260,9 +260,9 @@
                                 <span class="text-xl">👩‍💼</span>
                             </div>
                             <div class="flex-1">
-                                <h4 class="font-medium">Siti Nurhaliza, S.E.</h4>
+                                <h4 class="font-medium">Bambang H</h4>
                                 <p class="text-sm text-gray-600">Sekretaris</p>
-                                <p class="text-xs text-blue-600">📞 +62 856-1114-745</p>
+                                <p class="text-xs text-blue-600">📞 +62 818-0276-0277</p>
                             </div>
                         </div>
                         <div class="flex items-center space-x-4 p-3 border border-gray-200 rounded-lg">
@@ -270,9 +270,9 @@
                                 <span class="text-xl">👨‍💻</span>
                             </div>
                             <div class="flex-1">
-                                <h4 class="font-medium">Drs. Bambang Sutrisno</h4>
+                                <h4 class="font-medium">E Henny</h4>
                                 <p class="text-sm text-gray-600">Bendahara</p>
-                                <p class="text-xs text-blue-600">📞 +62 856-1114-745</p>
+                                <p class="text-xs text-blue-600">📞 +62 878-7953-2221</p>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                     <p class="text-sm text-gray-700">Silakan transfer ke rekening berikut dan kirimkan bukti transfer ke Admin (Bendahara).</p>
                     <div class="bg-blue-50 p-4 rounded-lg">
                         <p class="font-semibold text-blue-800">Bank Mandiri</p>
-                        <p class="text-lg font-bold text-gray-800">123-456-7890</p>
+                        <p class="text-lg font-bold text-gray-800">1370021932393</p>
                         <p class="text-sm text-gray-700">a/n Koperasi Jasa Kita Satu Kata</p>
                     </div>
                     <p class="text-sm text-gray-700">Admin akan mengupdate saldo Anda setelah verifikasi.</p>
@@ -636,4 +636,5 @@
     </script>
 </body>
 </html>
+
 
