--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <p class="text-sm text-gray-700">Silakan transfer ke rekening berikut dan kirimkan bukti transfer ke Admin (Bendahara).</p>
                     <div class="bg-blue-50 p-4 rounded-lg">
                         <p class="font-semibold text-blue-800">Bank Mandiri</p>
-                        <p class="text-lg font-bold text-gray-800">123-456-7890</p>
+                        <p class="text-lg font-bold text-gray-800">1370021932393</p>
                         <p class="text-sm text-gray-700">a/n Koperasi Jasa Kita Satu Kata</p>
                     </div>
                     <p class="text-sm text-gray-700">Admin akan mengupdate saldo Anda setelah verifikasi.</p>
@@ -719,4 +719,5 @@
     </script>
 </body>
 </html>
+
 
